feat: #1225 Allow using functional identifier in /api/tests/ endpoints Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>